XWIKI-22187: Cannot get revisions with a criteria on a document not stored in DB
  * Reuse the filtering implementation that is already provided in
    XWikiVersioningStoreInterface
  * WIP: unit tests are not passing and it's missing doc